--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
         <title>Johnvak01's Site</title>
     </head>
     <body>
-        <p>test</p>
+        <header>
+            <p>header</p>    
+        </header>
+        <nav>
+            <p>Navigstion bar</p>
+        </nav>    
+        <main>
+            <p>Main Body</p>
+        </main>
+        <footer>
+          <p>Footer</p>  
+        </footer>
     </body>
 </html>
