--- a/index.html
+++ b/index.html
@@ -8,16 +8,23 @@
     </head>
     <body>
         <header>
-            <p>header</p>    
+            <h1>header</h1>    
         </header>
         <nav>
-            <p>Navigstion bar</p>
+            <div>
+                <a href="main/index.html">Index</a>
+            </div>
+            <div>
+                <p> Project #1 <p>
+            </div>   
         </nav>    
         <main>
-            <p>Main Body</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget fringilla mauris. Quisque ultricies faucibus purus, ut tristique felis blandit sit amet. Nulla vel orci in nisi fermentum fringilla. Ut eget leo egestas, molestie elit ac, facilisis dolor. Sed vel tincidunt arcu, in iaculis risus. Quisque ipsum lectus, pellentesque eu convallis at, gravida eu mi. Pellentesque egestas dapibus sollicitudin. Praesent nisl lectus, finibus quis blandit ac, ornare ac ex. Aliquam luctus orci urna, eget rutrum augue efficitur in. Duis sollicitudin arcu sem, eget accumsan est rhoncus vitae. Vivamus ultricies massa orci, ut auctor enim mollis sed. Sed efficitur ligula id maximus efficitur. Donec dictum nunc nec odio aliquet faucibus. Ut eget odio libero.</p>
+            <p>Nam id convallis neque. Suspendisse a massa risus. Donec congue, nunc in fermentum imperdiet, lacus nisi bibendum lacus, sit amet dapibus nunc purus vel ligula. Nulla risus massa, volutpat eget mi nec, gravida vehicula nunc. Nam luctus posuere faucibus. Praesent ultricies laoreet nulla, ac porta dolor placerat elementum. Sed eu ante ac quam tristique elementum a ac lectus. Mauris aliquet tortor ligula, suscipit porta velit vulputate in. Nam tincidunt leo non tristique vehicula. Fusce commodo ullamcorper magna, quis varius urna dictum bibendum. Duis aliquet vel tellus non tincidunt. Ut tristique lacus lectus, sit amet congue ex varius vulputate.</p>
+            <p>Vivamus nulla est, pellentesque a ligula et, tincidunt sagittis tortor. Vivamus condimentum posuere egestas. Proin et mattis nibh. Vestibulum id dolor et massa dictum lacinia. Quisque consectetur justo justo, sit amet placerat ex consequat a. Maecenas dolor arcu, molestie quis convallis eu, gravida at sapien. Sed augue ex, mattis in nisi in, lacinia posuere ex. Nam suscipit, eros in vulputate accumsan, lectus nunc convallis ex, eu lobortis turpis sem a elit. Quisque quis libero hendrerit eros dictum porttitor.</p>
+            <p>Nam pellentesque at magna ac vehicula. Pellentesque elementum elementum mauris in pulvinar. Aliquam magna velit, tempor ut hendrerit at, vulputate vel libero. Nam ultricies vehicula arcu quis finibus. Sed in lectus nisi. Proin ac euismod odio. Ut volutpat hendrerit nisi, et faucibus arcu volutpat eget. Sed id nisl dolor. Curabitur finibus mattis libero. Vestibulum in varius quam, eget convallis metus.</p>
+            <p>Fusce blandit, metus quis vehicula facilisis, odio eros eleifend diam, vel gravida lorem ante non ligula. In et rhoncus metus. Donec et dolor pharetra magna consectetur luctus vitae in eros. Curabitur in sem et turpis efficitur pharetra. Nam feugiat, mauris in blandit viverra, justo magna molestie ipsum, ut malesuada sem nunc eu tellus. Phasellus eu ipsum at enim pharetra malesuada eu quis nisi. Suspendisse dolor tellus, semper sed pulvinar vitae, semper eget arcu. Sed convallis hendrerit est, ut semper nisl feugiat eget. In vulputate lacus quam, et congue arcu eleifend a. Vestibulum a mattis nunc. Etiam sed ex sed velit pulvinar placerat quis sed est. Quisque at ligula ac felis accumsan efficitur vel sed urna. </p>
         </main>
-        <footer>
-          <p>Footer</p>  
-        </footer>
+        <footer>Footer</footer>
     </body>
 </html>
