--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Johnvak01's Site</title>
-        <link href="base_style.css" rel="stylesheet">
+        <link href="base_style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <header>
