--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             </div>
             <div>
                 <p> Project #1 <p>
+                <p> Project #2 <p>
             </div>   
         </nav>    
         <main>
